--- a/series/index.html
+++ b/series/index.html
@@ -55,7 +55,7 @@
   <header>
   
   <div class="avatar">
-    <img class="avatarMask" src="https://jimmytortilla.github.io/natesplace//img/avatar.png">
+    <img class="avatarMask" src="https://jimmytortilla.github.io/natesplace//img/avatar.svg">
     <a href="https://jimmytortilla.github.io/natesplace/"><img src="https://jimmytortilla.github.io/natesplace//img/avatar-border.svg"></a>
   </div>
   
@@ -78,7 +78,7 @@
   <p>
   &copy; 2019 Jimmy Tortilla.
   Powered by <a href="https://gohugo.io/">Hugo</a>
-  using the <a href="https://github.com/koirand/pulp/">pulp</a> theme.
+  using the <a href="https://github.com/koirand/pulp/">Pulp</a> theme.
   </p>
 </footer>
 
