--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
     <header>
   
   <div class="avatar">
-    <img class="avatarMask" src="https://jimmytortilla.github.io/natesplace//img/avatar.png">
+    <img class="avatarMask" src="https://jimmytortilla.github.io/natesplace//img/avatar.svg">
     <a href="https://jimmytortilla.github.io/natesplace/"><img src="https://jimmytortilla.github.io/natesplace//img/avatar-border.svg"></a>
   </div>
   
@@ -71,7 +71,7 @@
   <p>
   &copy; 2019 Jimmy Tortilla.
   Powered by <a href="https://gohugo.io/">Hugo</a>
-  using the <a href="https://github.com/koirand/pulp/">pulp</a> theme.
+  using the <a href="https://github.com/koirand/pulp/">Pulp</a> theme.
   </p>
 </footer>
 
